# Woong_Server/src/routes/cart.js
@@ -1,0 +1,9 @@
+const express = require('express')
+const cartctrl = require('../controller/cartController')
+
+const Cart = express.Router()
+
+/* GET home page. */
+Cart.post('/:item_idx', cartctrl.InsertCart)
+
+module.exports = Cart
